qt-restricted-extras/qscintilla/gen_qsciscintilla.h

typedef struct QColor QColor;
typedef struct QFont QFont;
typedef struct QIODevice QIODevice;
typedef struct QImage QImage;
typedef struct QMenu QMenu;
typedef struct QMetaObject QMetaObject;
typedef struct QPixmap QPixmap;
typedef struct QPoint QPoint;
typedef struct QsciDocument QsciDocument;
typedef struct QsciLexer QsciLexer;
typedef struct QsciScintilla QsciScintilla;
typedef struct QsciStyle QsciStyle;
typedef struct QsciStyledText QsciStyledText;
QMetaObject* QsciScintilla_metaObject(const QsciScintilla* self);
void* QsciScintilla_metacast(QsciScintilla* self, const char* param1);
int QsciScintilla_metacall(QsciScintilla* self, int param1, int param2, void** param3);
struct miqt_string QsciScintilla_tr(const char* s);
struct miqt_string QsciScintilla_trUtf8(const char* s);
struct miqt_array /* of struct miqt_string */  QsciScintilla_apiContext(QsciScintilla* self, int pos, int* context_start, int* last_word_start);
void QsciScintilla_annotate(QsciScintilla* self, int line, struct miqt_string text, int style);
void QsciScintilla_annotate2(QsciScintilla* self, int line, struct miqt_string text, QsciStyle* style);
void QsciScintilla_annotate3(QsciScintilla* self, int line, QsciStyledText* text);
struct miqt_string QsciScintilla_annotation(const QsciScintilla* self, int line);
int QsciScintilla_annotationDisplay(const QsciScintilla* self);
void QsciScintilla_clearAnnotations(QsciScintilla* self);
bool QsciScintilla_autoCompletionCaseSensitivity(const QsciScintilla* self);
bool QsciScintilla_autoCompletionFillupsEnabled(const QsciScintilla* self);
bool QsciScintilla_autoCompletionReplaceWord(const QsciScintilla* self);
bool QsciScintilla_autoCompletionShowSingle(const QsciScintilla* self);
int QsciScintilla_autoCompletionSource(const QsciScintilla* self);
int QsciScintilla_autoCompletionThreshold(const QsciScintilla* self);
int QsciScintilla_autoCompletionUseSingle(const QsciScintilla* self);
bool QsciScintilla_autoIndent(const QsciScintilla* self);
bool QsciScintilla_backspaceUnindents(const QsciScintilla* self);
void QsciScintilla_beginUndoAction(QsciScintilla* self);
int QsciScintilla_braceMatching(const QsciScintilla* self);
struct miqt_string QsciScintilla_bytes(const QsciScintilla* self, int start, int end);
int QsciScintilla_callTipsPosition(const QsciScintilla* self);
int QsciScintilla_callTipsStyle(const QsciScintilla* self);
int QsciScintilla_callTipsVisible(const QsciScintilla* self);
void QsciScintilla_cancelFind(QsciScintilla* self);
void QsciScintilla_cancelList(QsciScintilla* self);
bool QsciScintilla_caseSensitive(const QsciScintilla* self);
void QsciScintilla_clearFolds(QsciScintilla* self);
void QsciScintilla_clearIndicatorRange(QsciScintilla* self, int lineFrom, int indexFrom, int lineTo, int indexTo, int indicatorNumber);
void QsciScintilla_clearRegisteredImages(QsciScintilla* self);
QColor* QsciScintilla_color(const QsciScintilla* self);
struct miqt_array /* of int */  QsciScintilla_contractedFolds(const QsciScintilla* self);
void QsciScintilla_convertEols(QsciScintilla* self, int mode);
QMenu* QsciScintilla_createStandardContextMenu(QsciScintilla* self);
QsciDocument* QsciScintilla_document(const QsciScintilla* self);
void QsciScintilla_endUndoAction(QsciScintilla* self);
QColor* QsciScintilla_edgeColor(const QsciScintilla* self);
int QsciScintilla_edgeColumn(const QsciScintilla* self);
int QsciScintilla_edgeMode(const QsciScintilla* self);
void QsciScintilla_setFont(QsciScintilla* self, QFont* f);
int QsciScintilla_eolMode(const QsciScintilla* self);
bool QsciScintilla_eolVisibility(const QsciScintilla* self);
int QsciScintilla_extraAscent(const QsciScintilla* self);
int QsciScintilla_extraDescent(const QsciScintilla* self);
void QsciScintilla_fillIndicatorRange(QsciScintilla* self, int lineFrom, int indexFrom, int lineTo, int indexTo, int indicatorNumber);
bool QsciScintilla_findFirst(QsciScintilla* self, struct miqt_string expr, bool re, bool cs, bool wo, bool wrap, bool forward, int line, int index, bool show, bool posix, bool cxx11);
bool QsciScintilla_findFirstInSelection(QsciScintilla* self, struct miqt_string expr, bool re, bool cs, bool wo, bool forward, bool show, bool posix, bool cxx11);
bool QsciScintilla_findNext(QsciScintilla* self);
bool QsciScintilla_findMatchingBrace(QsciScintilla* self, long* brace, long* other, int mode);
int QsciScintilla_firstVisibleLine(const QsciScintilla* self);
int QsciScintilla_folding(const QsciScintilla* self);
void QsciScintilla_getCursorPosition(const QsciScintilla* self, int* line, int* index);
void QsciScintilla_getSelection(const QsciScintilla* self, int* lineFrom, int* indexFrom, int* lineTo, int* indexTo);
bool QsciScintilla_hasSelectedText(const QsciScintilla* self);
int QsciScintilla_indentation(const QsciScintilla* self, int line);
bool QsciScintilla_indentationGuides(const QsciScintilla* self);
bool QsciScintilla_indentationsUseTabs(const QsciScintilla* self);
int QsciScintilla_indentationWidth(const QsciScintilla* self);
int QsciScintilla_indicatorDefine(QsciScintilla* self, int style);
bool QsciScintilla_indicatorDrawUnder(const QsciScintilla* self, int indicatorNumber);
bool QsciScintilla_isCallTipActive(const QsciScintilla* self);
bool QsciScintilla_isListActive(const QsciScintilla* self);
bool QsciScintilla_isModified(const QsciScintilla* self);
bool QsciScintilla_isReadOnly(const QsciScintilla* self);
bool QsciScintilla_isRedoAvailable(const QsciScintilla* self);
bool QsciScintilla_isUndoAvailable(const QsciScintilla* self);
bool QsciScintilla_isUtf8(const QsciScintilla* self);
bool QsciScintilla_isWordCharacter(const QsciScintilla* self, char ch);
int QsciScintilla_lineAt(const QsciScintilla* self, QPoint* point);
void QsciScintilla_lineIndexFromPosition(const QsciScintilla* self, int position, int* line, int* index);
int QsciScintilla_lineLength(const QsciScintilla* self, int line);
int QsciScintilla_lines(const QsciScintilla* self);
int QsciScintilla_length(const QsciScintilla* self);
QsciLexer* QsciScintilla_lexer(const QsciScintilla* self);
QColor* QsciScintilla_marginBackgroundColor(const QsciScintilla* self, int margin);
bool QsciScintilla_marginLineNumbers(const QsciScintilla* self, int margin);
int QsciScintilla_marginMarkerMask(const QsciScintilla* self, int margin);
int QsciScintilla_marginOptions(const QsciScintilla* self);
bool QsciScintilla_marginSensitivity(const QsciScintilla* self, int margin);
int QsciScintilla_marginType(const QsciScintilla* self, int margin);
int QsciScintilla_marginWidth(const QsciScintilla* self, int margin);
int QsciScintilla_margins(const QsciScintilla* self);
int QsciScintilla_markerDefine(QsciScintilla* self, int sym);
int QsciScintilla_markerDefineWithCh(QsciScintilla* self, char ch);
int QsciScintilla_markerDefineWithPm(QsciScintilla* self, QPixmap* pm);
int QsciScintilla_markerDefineWithIm(QsciScintilla* self, QImage* im);
int QsciScintilla_markerAdd(QsciScintilla* self, int linenr, int markerNumber);
unsigned int QsciScintilla_markersAtLine(const QsciScintilla* self, int linenr);
void QsciScintilla_markerDelete(QsciScintilla* self, int linenr);
void QsciScintilla_markerDeleteAll(QsciScintilla* self);
void QsciScintilla_markerDeleteHandle(QsciScintilla* self, int mhandle);
int QsciScintilla_markerLine(const QsciScintilla* self, int mhandle);
int QsciScintilla_markerFindNext(const QsciScintilla* self, int linenr, unsigned int mask);
int QsciScintilla_markerFindPrevious(const QsciScintilla* self, int linenr, unsigned int mask);
bool QsciScintilla_overwriteMode(const QsciScintilla* self);
QColor* QsciScintilla_paper(const QsciScintilla* self);
int QsciScintilla_positionFromLineIndex(const QsciScintilla* self, int line, int index);
bool QsciScintilla_read(QsciScintilla* self, QIODevice* io);
void QsciScintilla_recolor(QsciScintilla* self, int start, int end);
void QsciScintilla_registerImage(QsciScintilla* self, int id, QPixmap* pm);
void QsciScintilla_registerImage2(QsciScintilla* self, int id, QImage* im);