qt-restricted-extras/qscintilla/gen_qsciscintilla.nim


proc fcQsciScintilla_metaObject(self: pointer, ): pointer {.importc: "QsciScintilla_metaObject".}
proc fcQsciScintilla_metacast(self: pointer, param1: cstring): pointer {.importc: "QsciScintilla_metacast".}
proc fcQsciScintilla_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QsciScintilla_metacall".}
proc fcQsciScintilla_tr(s: cstring): struct_miqt_string {.importc: "QsciScintilla_tr".}
proc fcQsciScintilla_trUtf8(s: cstring): struct_miqt_string {.importc: "QsciScintilla_trUtf8".}
proc fcQsciScintilla_apiContext(self: pointer, pos: cint, context_start: ptr cint, last_word_start: ptr cint): struct_miqt_array {.importc: "QsciScintilla_apiContext".}
proc fcQsciScintilla_annotate(self: pointer, line: cint, text: struct_miqt_string, style: cint): void {.importc: "QsciScintilla_annotate".}
proc fcQsciScintilla_annotate2(self: pointer, line: cint, text: struct_miqt_string, style: pointer): void {.importc: "QsciScintilla_annotate2".}
proc fcQsciScintilla_annotate3(self: pointer, line: cint, text: pointer): void {.importc: "QsciScintilla_annotate3".}
proc fcQsciScintilla_annotation(self: pointer, line: cint): struct_miqt_string {.importc: "QsciScintilla_annotation".}
proc fcQsciScintilla_annotationDisplay(self: pointer, ): cint {.importc: "QsciScintilla_annotationDisplay".}
proc fcQsciScintilla_clearAnnotations(self: pointer, ): void {.importc: "QsciScintilla_clearAnnotations".}
proc fcQsciScintilla_autoCompletionCaseSensitivity(self: pointer, ): bool {.importc: "QsciScintilla_autoCompletionCaseSensitivity".}
proc fcQsciScintilla_autoCompletionFillupsEnabled(self: pointer, ): bool {.importc: "QsciScintilla_autoCompletionFillupsEnabled".}
proc fcQsciScintilla_autoCompletionReplaceWord(self: pointer, ): bool {.importc: "QsciScintilla_autoCompletionReplaceWord".}
proc fcQsciScintilla_autoCompletionShowSingle(self: pointer, ): bool {.importc: "QsciScintilla_autoCompletionShowSingle".}
proc fcQsciScintilla_autoCompletionSource(self: pointer, ): cint {.importc: "QsciScintilla_autoCompletionSource".}
proc fcQsciScintilla_autoCompletionThreshold(self: pointer, ): cint {.importc: "QsciScintilla_autoCompletionThreshold".}
proc fcQsciScintilla_autoCompletionUseSingle(self: pointer, ): cint {.importc: "QsciScintilla_autoCompletionUseSingle".}
proc fcQsciScintilla_autoIndent(self: pointer, ): bool {.importc: "QsciScintilla_autoIndent".}
proc fcQsciScintilla_backspaceUnindents(self: pointer, ): bool {.importc: "QsciScintilla_backspaceUnindents".}
proc fcQsciScintilla_beginUndoAction(self: pointer, ): void {.importc: "QsciScintilla_beginUndoAction".}
proc fcQsciScintilla_braceMatching(self: pointer, ): cint {.importc: "QsciScintilla_braceMatching".}
proc fcQsciScintilla_bytes(self: pointer, start: cint, endVal: cint): struct_miqt_string {.importc: "QsciScintilla_bytes".}
proc fcQsciScintilla_callTipsPosition(self: pointer, ): cint {.importc: "QsciScintilla_callTipsPosition".}
proc fcQsciScintilla_callTipsStyle(self: pointer, ): cint {.importc: "QsciScintilla_callTipsStyle".}
proc fcQsciScintilla_callTipsVisible(self: pointer, ): cint {.importc: "QsciScintilla_callTipsVisible".}
proc fcQsciScintilla_cancelFind(self: pointer, ): void {.importc: "QsciScintilla_cancelFind".}
proc fcQsciScintilla_cancelList(self: pointer, ): void {.importc: "QsciScintilla_cancelList".}
proc fcQsciScintilla_caseSensitive(self: pointer, ): bool {.importc: "QsciScintilla_caseSensitive".}
proc fcQsciScintilla_clearFolds(self: pointer, ): void {.importc: "QsciScintilla_clearFolds".}
proc fcQsciScintilla_clearIndicatorRange(self: pointer, lineFrom: cint, indexFrom: cint, lineTo: cint, indexTo: cint, indicatorNumber: cint): void {.importc: "QsciScintilla_clearIndicatorRange".}
proc fcQsciScintilla_clearRegisteredImages(self: pointer, ): void {.importc: "QsciScintilla_clearRegisteredImages".}
proc fcQsciScintilla_color(self: pointer, ): pointer {.importc: "QsciScintilla_color".}
proc fcQsciScintilla_contractedFolds(self: pointer, ): struct_miqt_array {.importc: "QsciScintilla_contractedFolds".}
proc fcQsciScintilla_convertEols(self: pointer, mode: cint): void {.importc: "QsciScintilla_convertEols".}
proc fcQsciScintilla_createStandardContextMenu(self: pointer, ): pointer {.importc: "QsciScintilla_createStandardContextMenu".}
proc fcQsciScintilla_document(self: pointer, ): pointer {.importc: "QsciScintilla_document".}
proc fcQsciScintilla_endUndoAction(self: pointer, ): void {.importc: "QsciScintilla_endUndoAction".}
proc fcQsciScintilla_edgeColor(self: pointer, ): pointer {.importc: "QsciScintilla_edgeColor".}
proc fcQsciScintilla_edgeColumn(self: pointer, ): cint {.importc: "QsciScintilla_edgeColumn".}
proc fcQsciScintilla_edgeMode(self: pointer, ): cint {.importc: "QsciScintilla_edgeMode".}
proc fcQsciScintilla_setFont(self: pointer, f: pointer): void {.importc: "QsciScintilla_setFont".}
proc fcQsciScintilla_eolMode(self: pointer, ): cint {.importc: "QsciScintilla_eolMode".}
proc fcQsciScintilla_eolVisibility(self: pointer, ): bool {.importc: "QsciScintilla_eolVisibility".}
proc fcQsciScintilla_extraAscent(self: pointer, ): cint {.importc: "QsciScintilla_extraAscent".}
proc fcQsciScintilla_extraDescent(self: pointer, ): cint {.importc: "QsciScintilla_extraDescent".}
proc fcQsciScintilla_fillIndicatorRange(self: pointer, lineFrom: cint, indexFrom: cint, lineTo: cint, indexTo: cint, indicatorNumber: cint): void {.importc: "QsciScintilla_fillIndicatorRange".}
proc fcQsciScintilla_findFirst(self: pointer, expr: struct_miqt_string, re: bool, cs: bool, wo: bool, wrap: bool, forward: bool, line: cint, index: cint, show: bool, posix: bool, cxx11: bool): bool {.importc: "QsciScintilla_findFirst".}
proc fcQsciScintilla_findFirstInSelection(self: pointer, expr: struct_miqt_string, re: bool, cs: bool, wo: bool, forward: bool, show: bool, posix: bool, cxx11: bool): bool {.importc: "QsciScintilla_findFirstInSelection".}
proc fcQsciScintilla_findNext(self: pointer, ): bool {.importc: "QsciScintilla_findNext".}
proc fcQsciScintilla_findMatchingBrace(self: pointer, brace: ptr clong, other: ptr clong, mode: cint): bool {.importc: "QsciScintilla_findMatchingBrace".}
proc fcQsciScintilla_firstVisibleLine(self: pointer, ): cint {.importc: "QsciScintilla_firstVisibleLine".}
proc fcQsciScintilla_folding(self: pointer, ): cint {.importc: "QsciScintilla_folding".}
proc fcQsciScintilla_getCursorPosition(self: pointer, line: ptr cint, index: ptr cint): void {.importc: "QsciScintilla_getCursorPosition".}
proc fcQsciScintilla_getSelection(self: pointer, lineFrom: ptr cint, indexFrom: ptr cint, lineTo: ptr cint, indexTo: ptr cint): void {.importc: "QsciScintilla_getSelection".}
proc fcQsciScintilla_hasSelectedText(self: pointer, ): bool {.importc: "QsciScintilla_hasSelectedText".}
proc fcQsciScintilla_indentation(self: pointer, line: cint): cint {.importc: "QsciScintilla_indentation".}
proc fcQsciScintilla_indentationGuides(self: pointer, ): bool {.importc: "QsciScintilla_indentationGuides".}
proc fcQsciScintilla_indentationsUseTabs(self: pointer, ): bool {.importc: "QsciScintilla_indentationsUseTabs".}
proc fcQsciScintilla_indentationWidth(self: pointer, ): cint {.importc: "QsciScintilla_indentationWidth".}
proc fcQsciScintilla_indicatorDefine(self: pointer, style: cint): cint {.importc: "QsciScintilla_indicatorDefine".}
proc fcQsciScintilla_indicatorDrawUnder(self: pointer, indicatorNumber: cint): bool {.importc: "QsciScintilla_indicatorDrawUnder".}
proc fcQsciScintilla_isCallTipActive(self: pointer, ): bool {.importc: "QsciScintilla_isCallTipActive".}
proc fcQsciScintilla_isListActive(self: pointer, ): bool {.importc: "QsciScintilla_isListActive".}
proc fcQsciScintilla_isModified(self: pointer, ): bool {.importc: "QsciScintilla_isModified".}
proc fcQsciScintilla_isReadOnly(self: pointer, ): bool {.importc: "QsciScintilla_isReadOnly".}
proc fcQsciScintilla_isRedoAvailable(self: pointer, ): bool {.importc: "QsciScintilla_isRedoAvailable".}
proc fcQsciScintilla_isUndoAvailable(self: pointer, ): bool {.importc: "QsciScintilla_isUndoAvailable".}
proc fcQsciScintilla_isUtf8(self: pointer, ): bool {.importc: "QsciScintilla_isUtf8".}
proc fcQsciScintilla_isWordCharacter(self: pointer, ch: cchar): bool {.importc: "QsciScintilla_isWordCharacter".}
proc fcQsciScintilla_lineAt(self: pointer, point: pointer): cint {.importc: "QsciScintilla_lineAt".}
proc fcQsciScintilla_lineIndexFromPosition(self: pointer, position: cint, line: ptr cint, index: ptr cint): void {.importc: "QsciScintilla_lineIndexFromPosition".}
proc fcQsciScintilla_lineLength(self: pointer, line: cint): cint {.importc: "QsciScintilla_lineLength".}
proc fcQsciScintilla_lines(self: pointer, ): cint {.importc: "QsciScintilla_lines".}
proc fcQsciScintilla_length(self: pointer, ): cint {.importc: "QsciScintilla_length".}
proc fcQsciScintilla_lexer(self: pointer, ): pointer {.importc: "QsciScintilla_lexer".}
proc fcQsciScintilla_marginBackgroundColor(self: pointer, margin: cint): pointer {.importc: "QsciScintilla_marginBackgroundColor".}
proc fcQsciScintilla_marginLineNumbers(self: pointer, margin: cint): bool {.importc: "QsciScintilla_marginLineNumbers".}
proc fcQsciScintilla_marginMarkerMask(self: pointer, margin: cint): cint {.importc: "QsciScintilla_marginMarkerMask".}
proc fcQsciScintilla_marginOptions(self: pointer, ): cint {.importc: "QsciScintilla_marginOptions".}
proc fcQsciScintilla_marginSensitivity(self: pointer, margin: cint): bool {.importc: "QsciScintilla_marginSensitivity".}
proc fcQsciScintilla_marginType(self: pointer, margin: cint): cint {.importc: "QsciScintilla_marginType".}
proc fcQsciScintilla_marginWidth(self: pointer, margin: cint): cint {.importc: "QsciScintilla_marginWidth".}
proc fcQsciScintilla_margins(self: pointer, ): cint {.importc: "QsciScintilla_margins".}
proc fcQsciScintilla_markerDefine(self: pointer, sym: cint): cint {.importc: "QsciScintilla_markerDefine".}
proc fcQsciScintilla_markerDefineWithCh(self: pointer, ch: cchar): cint {.importc: "QsciScintilla_markerDefineWithCh".}
proc fcQsciScintilla_markerDefineWithPm(self: pointer, pm: pointer): cint {.importc: "QsciScintilla_markerDefineWithPm".}
proc fcQsciScintilla_markerDefineWithIm(self: pointer, im: pointer): cint {.importc: "QsciScintilla_markerDefineWithIm".}
proc fcQsciScintilla_markerAdd(self: pointer, linenr: cint, markerNumber: cint): cint {.importc: "QsciScintilla_markerAdd".}
proc fcQsciScintilla_markersAtLine(self: pointer, linenr: cint): cuint {.importc: "QsciScintilla_markersAtLine".}
proc fcQsciScintilla_markerDelete(self: pointer, linenr: cint): void {.importc: "QsciScintilla_markerDelete".}
proc fcQsciScintilla_markerDeleteAll(self: pointer, ): void {.importc: "QsciScintilla_markerDeleteAll".}
proc fcQsciScintilla_markerDeleteHandle(self: pointer, mhandle: cint): void {.importc: "QsciScintilla_markerDeleteHandle".}
proc fcQsciScintilla_markerLine(self: pointer, mhandle: cint): cint {.importc: "QsciScintilla_markerLine".}
proc fcQsciScintilla_markerFindNext(self: pointer, linenr: cint, mask: cuint): cint {.importc: "QsciScintilla_markerFindNext".}
proc fcQsciScintilla_markerFindPrevious(self: pointer, linenr: cint, mask: cuint): cint {.importc: "QsciScintilla_markerFindPrevious".}
proc fcQsciScintilla_overwriteMode(self: pointer, ): bool {.importc: "QsciScintilla_overwriteMode".}
proc fcQsciScintilla_paper(self: pointer, ): pointer {.importc: "QsciScintilla_paper".}
proc fcQsciScintilla_positionFromLineIndex(self: pointer, line: cint, index: cint): cint {.importc: "QsciScintilla_positionFromLineIndex".}
proc fcQsciScintilla_read(self: pointer, io: pointer): bool {.importc: "QsciScintilla_read".}
proc fcQsciScintilla_recolor(self: pointer, start: cint, endVal: cint): void {.importc: "QsciScintilla_recolor".}
proc fcQsciScintilla_registerImage(self: pointer, id: cint, pm: pointer): void {.importc: "QsciScintilla_registerImage".}
proc fcQsciScintilla_registerImage2(self: pointer, id: cint, im: pointer): void {.importc: "QsciScintilla_registerImage2".}
